--- a/style.css
+++ b/style.css
@@ -1,11 +1,81 @@
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+:root{
+    --c1:#111729;
+    --c2:#4036A9;
+    --c3:#B4436D;
+    --c4:#CDD5E0;
+    --c5:#FFFFFF;
+    --c6:#FFFFFF33;
+}
 
 body{
     background-image: url('assets/background.svg');
     background-repeat: no-repeat;
+    background-size: cover;
+    padding: 20px 10px;
+}
+body,
+input,
+select,
+textarea,
+button {
+    font-family: "Be Vietnam Pro", sans-serif;
+}
 
+/* nav{
+    border: 1px solid greenyellow;
+} */
+#logo{
+    width: 110px;
+}
+main{
+
+}
+#appelarea{
+    padding: 40px 0px;
+}
+h1{
+    font-size:clamp(40px,2.3vw + 30px, 64px);
+    color: var(--c5);
+    text-align: center;
+}
+p{
+    margin-top: 20px;
+    text-align: center;
+    color: var(--c5);
+}
+#formarea{
+    margin-top: 20px;
+    background-color: var(--c6);
+
+    border-radius: 16px;
+    padding: 20px 10px;
+}
+label{
+    color: var(--c5);
+    font-size: 14px;
+}
+input::placeholder{
+    color: var(--c1);
+    font-size: 16px;
+}
+input, select, textarea{
+    margin-top: 5px;
+    margin-bottom: 20px;
+    width: 100%;
+    padding: 20px;
+    border-radius: 16px;
+    border: none;
+    font-size: 16px;
+    color: var(--c1);
+
+}
+button{
+    color: var(--c2);
+    font-size: 20px;
 }
