--- a/style.css
+++ b/style.css
@@ -50,32 +50,33 @@ p{
     color: var(--c5);
 }
 #formarea{
-    margin-top: 20px;
+    margin: 20px 0px 60px;
     background-color: var(--c6);
-
     border-radius: 16px;
-    padding: 20px 10px;
+    padding: 20px 12px;
 }
 label{
     color: var(--c5);
     font-size: 14px;
+
 }
 input::placeholder{
     color: var(--c1);
     font-size: 16px;
 }
-input, select, textarea{
-    margin-top: 5px;
-    margin-bottom: 20px;
+input, select, textarea, button{
+    margin: 5px 0px 20px;
     width: 100%;
     padding: 20px;
     border-radius: 16px;
     border: none;
     font-size: 16px;
     color: var(--c1);
-
+    font-weight: bold;
 }
+
 button{
     color: var(--c2);
     font-size: 20px;
+    margin: 0px;
 }
