--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@
     --c4:#CDD5E0;
     --c5:#FFFFFF;
     --c6:#FFFFFF33;
+    
 }
 
 body{
-    background-image: url('assets/background.svg');
+    background-image: url(./assets/background.svg);
     background-repeat: no-repeat;
     background-size: cover;
     padding: 20px 10px;
@@ -72,7 +73,7 @@ input::placeholder, textarea::placeholder{
 input, select, textarea, button{
     margin: 5px 0px 20px;
     width: 100%;
-    padding: 20px;
+    padding: 24px;
     border-radius: 16px;
     border: none;
     font-size: 16px;
@@ -102,4 +103,10 @@ button{
     color: var(--c2);
     font-size: 20px;
     margin: 0px;
+}
+
+@media (min-width:640px) {
+    body{
+        background-image: linear-gradient(135deg,var(--c3),var(--c2));
+    }    
 }
