--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@
 body{
     background-image: linear-gradient(120deg,var(--c3),var(--c2)160%);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
     padding: 20px 10px;
-    width: 100%;
+    min-height: 100vh;
     min-width: 150px;
 }
 body,
