--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 body{
-    background-image: linear-gradient(120deg,var(--c3),var(--c2)160%);
+    background-image: linear-gradient(120deg,var(--c3),var(--c2));
     background-repeat: no-repeat;
     background-size:cover;
     padding: 20px 10px;
