--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 body{
-    background-image: linear-gradient(120deg,var(--c3),var(--c2));
+    background-image: linear-gradient(120deg, var(--c3) 0%, var(--c3) 20%, var(--c2) 80%, var(--c2) 100%);
     background-repeat: no-repeat;
     background-size:cover;
     padding: 20px 10px;
